@@ -68,7 +68,7 @@
     <ClInclude Include="..\..\libcob\common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\libcob\libversion.h">
+    <ClInclude Include="..\..\libcob\version.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
